# simple_chat_qt

./: .gitignore  CMakeLists.txt  README.md  chatmodel.cpp  chatmodel.h  main.cpp  openaiclient.cpp  openaiclient.h
ui/: Main.qml  Prompt.qml  Theme.qml
ui/chat/: ChatMessage.qml  ChatView.qml
